[package]
name = "calibrate-stm32mp25-rgmii"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
clap = { version = "4.3.11", features = ["derive"] }
libc = "0.2.147"
log = "0.4.19"
nix = "0.26.2"
stderrlog = "0.5.4"
thiserror = "1.0.43"
