[package]
description = "A tool to calibrate RGMII GTX clock delay on STM32MP2"
name = "stm32mp25-rgmii-gtx-clock-delay"
version = "0.6.2"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byte-unit = "4.0.19"
clap = { version = "=4.3.24", features = ["derive"] }
clap_lex = "=0.5.0"
curl = "0.4.44"
lazy_static = "1.4.0"
libc = "0.2.147"
log = "0.4.19"
nix = "0.26.2"
stderrlog = "0.5.4"
